--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
